<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sample="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppBaseTheme"
    android:title="Preferences"
    tools:context="activities.Activity_Main">
    <PreferenceCategory
        android:icon="@drawable/ic_widgets_black_24dp"
        android:persistent="false"
        android:title="@string/usage_settings">
        <Preference
            android:enabled="false"
            android:icon="@drawable/ic_widgets_black_24dp"
            android:selectable="false"
            android:shouldDisableView="false"
            android:summary="@string/usage_explain" />
        <CheckBoxPreference
            android:icon="@drawable/ic_subtitles_black_24dp"
            android:key="WIDGET_CHOICE"
            android:summaryOff="@string/widget_normal"
            android:summaryOn="@string/widgets_alternative"
            android:title="@string/widget_choice" />
        <CheckBoxPreference
            android:key="widget_timestamp"
            android:summaryOff="@string/option_widget_timestamp_ago"
            android:summaryOn="@string/option_widget_timestamp_date"
            android:title="@string/option_widget_timestamp_title" />
        <CheckBoxPreference
            android:icon="@drawable/ic_timeline_black_24dp"
            android:key="Graph_CHOICE"
            android:summaryOff="@string/Graph_normal"
            android:summaryOn="@string/Graph_achartengine"
            android:title="@string/graph_choice" />
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="262"
            android:enabled="true"
            android:key="graphics_height_size"
            android:summary="@string/option_graph_height_summary"
            android:title="@string/option_graph_height"
            sample:msbp_dialogEnabled="true"
            sample:msbp_interval="10"
            sample:msbp_maxValue="840"
            sample:msbp_measurementUnit="px"
            sample:msbp_minValue="260" />
        <!--NOt handle by the lib
        android:icon="@drawable/ic_zoom_out_map_black_24dp"
        -->
        <!--Replace by SeekBarPreference
        <EditTextPreference
            android:defaultValue="262.5"
            android:icon="@drawable/ic_zoom_out_map_black_24dp"
            android:inputType="number"
            android:key="graph_size"
            android:title="@string/option_graph_height" />
        -->
        <EditTextPreference
            android:defaultValue="5"
            android:icon="@drawable/ic_drawer"
            android:inputType="number"
            android:key="history_length"
            android:title="@string/history_item_number" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_stay_current_landscape_black_24dp"
            android:key="twocol_lanscape"
            android:summaryOff="@string/twocollandscape_2"
            android:summaryOn="@string/twocollandscape_1"
            android:title="@string/twocollandscapecheckbox" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_stay_current_portrait_black_24dp"
            android:key="twocol_portrait"
            android:summaryOff="@string/twocolportrait_2"
            android:summaryOn="@string/twocolportrait_1"
            android:title="@string/twocolportraitcheckbox" />


    </PreferenceCategory>
</PreferenceScreen>