<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppBaseTheme"
    android:title="Preferences"
    tools:context="activities.Activity_Main">

    <Preference
        android:icon="@drawable/ic_settings_applications_black_24dp"
        android:persistent="false"
        android:title="@string/OPTION_server_settings">
        <intent
            android:action="preferences_server"
            android:targetClass="activities.Preference"
            android:targetPackage="org.domogik.domodroid13" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_mq_24dp"
        android:persistent="false"
        android:title="@string/mq_settings">
        <intent
            android:action="preferences_mq"
            android:targetClass="activities.Preference"
            android:targetPackage="org.domogik.domodroid13" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_widgets_black_24dp"
        android:persistent="false"
        android:title="@string/usage_settings">
        <intent
            android:action="preferences_widget"
            android:targetClass="activities.Preference"
            android:targetPackage="org.domogik.domodroid13" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_map_black_24dp"
        android:persistent="false"
        android:title="@string/map_settings">
        <intent
            android:action="preferences_map"
            android:targetClass="activities.Preference"
            android:targetPackage="org.domogik.domodroid13" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_home_black_24dp"
        android:persistent="false"
        android:title="@string/house_settings">
        <intent
            android:action="preferences_house"
            android:targetClass="activities.Preference"
            android:targetPackage="org.domogik.domodroid13" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_forum_black_24dp"
        android:persistent="false"
        android:title="@string/OPTION_butler_settings">
        <intent
            android:action="preferences_butler"
            android:targetClass="activities.Preference"
            android:targetPackage="org.domogik.domodroid13" />
    </Preference>

    <Preference
        android:icon="@drawable/ic_bug_report_black_24dp"
        android:persistent="false"
        android:title="@string/debug_settings">
        <intent
            android:action="preferences_debug"
            android:targetClass="activities.Preference"
            android:targetPackage="org.domogik.domodroid13" />
    </Preference>

</PreferenceScreen>